chore: 1: moved file read into spererate class 2: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# Mac
+.DS_Store
+
+# Compiled binary addons
+build
+
+# Dependency directory
 node_modules
+
+# IDE directories
+.idea
+.history
+
 
